--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,12 +12,15 @@
             margin: 0;
             background-color: #f0f0f0; /* Background color */
         }
+
         .login-container {
             text-align: center;
         }
+
         h1 { /* This allows the hr to be close to title */
             margin-bottom: 0px;
         }
+
         .login-form {
             background-color: #ffffff; /* Form background color */
             padding: 20px;
@@ -26,15 +29,18 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: left; /* Ensure content within the form is left-aligned */
         }
+
         .form-group {
             display: flex;
             flex-direction: column;
             align-items: flex-start; /* Align fields to the start of flex container */
             margin-bottom: 20px;
         }
+
         label {
             margin-bottom: 5px;
         }
+
         input[type="text"],
         input[type="password"],
         input[type="submit"] {
@@ -44,6 +50,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
+
         input[type="submit"] {
             padding: 10px;
             background-color: #007bff;
@@ -52,26 +59,38 @@
             cursor: pointer;
             width: 50%
         }
+
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+
         .error-message {
             color: red;
             margin-bottom: 20px;
         }
+
+        .success-message {
+            color: green;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
         hr {
             width: 50%;
         }
+
         .sign-up-link {
             display: flex;
             justify-content: center;
             margin-top: 20px;
         }
+
         .sign-up-link a {
             text-decoration: none;
             color: #007bff;
             cursor: pointer;
         }
+
         .sign-up-link a:hover {
             text-decoration: underline;
         }
@@ -81,6 +100,9 @@
 <div class="login-container">
     <h1>Project Approval System</h1>
     <hr>
+    <div th:if="${success}" class="success-message">
+        <p th:text="${success}"></p>
+    </div>
     <div th:if="${param.error}" class="error-message">
         Invalid username or password.
     </div>
@@ -104,6 +126,9 @@
         </div>
         <div class="sign-up-link">
             <a th:href="@{/auth/faculty-signup}">Faculty Sign up</a>
+        </div>
+        <div class="sign-up-link">
+            <a th:href="@{/auth/forgot-password}">Forgot Password?</a>
         </div>
     </form>
 </div>
