--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="layouts/main-layout :: common_header(~{::title}, _)">
     <meta charset="UTF-8">
     <title>Forgot Password</title>
-    <style>
-        .message {
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-
-        .success-message {
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-
-        .error-message {
-            background-color: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
-        }
-    </style>
 </head>
-<body>
-<h1>Forgot Password</h1>
-<div th:if="${successMessage}" class="message success-message">
-    <p th:text="${successMessage}"></p>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-light">
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+            <h1 class="mb-4">Forgot Password</h1>
+            <div th:if="${successMessage}" class="alert alert-success" role="alert">
+                <p th:text="${successMessage}"></p>
+            </div>
+            <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+                <p th:text="${errorMessage}"></p>
+            </div>
+            <form th:action="@{/auth/forgot-password}" method="post" class="bg-white p-4 shadow rounded">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Enter your email:</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Submit</button>
+            </form>
+            <div class="mt-3">
+                <a th:href="@{/auth/login}" class="d-block">Back to Login</a>
+            </div>
+        </div>
+    </div>
 </div>
-<div th:if="${errorMessage}" class="message error-message">
-    <p th:text="${errorMessage}"></p>
-</div>
-<form th:action="@{/auth/forgot-password}" method="post">
-    <label for="email">Enter your email:</label>
-    <input type="email" id="email" name="email" required/>
-    <button type="submit">Submit</button>
-</form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
