--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -51,6 +51,9 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
             <li>
+                <a th:href="@{/user/profile}" class="dropdown-item">
+                    Profile
+                </a>
                 <form th:action="@{/auth/logout}" method="post" style="display: inline;">
                     <button type="submit" class="dropdown-item">
                         Sign out
