Changing name from Project Approval System to Request Approval System

--- a/src/main/resources/templates/faculty-signup.html
+++ b/src/main/resources/templates/faculty-signup.html
@@ -8,7 +8,7 @@
 <div class="container text-center">
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
-            <h1 class="mb-3">Project Approval System - Faculty Signup</h1>
+            <h1 class="mb-3">Request Approval System - Faculty Signup</h1>
             <hr class="mb-4">
             <div th:if="${error}" class="alert alert-danger" role="alert">
                 <p th:text="${error}"></p>
